--- a/home.html
+++ b/home.html
@@ -5463,18 +5463,18 @@
     <main class="home-page v2">
         <div class="mobile-item">
             <div class="mobile-cafe__text">
-                <h2 class="mobile-cafe__title">Адреса кафе</h2>
-                <h3 class="mobile-cafe__sub-title">Ближайшие к вам кафе</h3>
+                <h2 class="mobile-cafe__title">Доставка еды</h2>
+                <h3 class="mobile-cafe__sub-title">Вкусно, как в АндерСон, только дома</h3>
                 <!--<div class="mobile-text__arrow"><img src="./img/icons/icon-mobile-arrow.png" alt=""></div>-->
-                <a href="#" class="main-btn">Прийти
+                <a href="#" class="main-btn">Заказать
                     <svg class="c-symbol symbol-arrow-3"><use xlink:href="sprite/main-index.svg#symbol-arrow-3" /></svg>
                 </a>
             </div>
             <section class="home-cafe" itemscope itemtype="http://schema.org/ImageObject">
                 <div class="home-cafe__text">
-                    <h2 itemprop="name" class="home-cafe__title">Адреса кафе</h2>
-                    <h3 itemprop="description" class="home-cafe__sub-title">приходите в гости</h3>
-                    <a href="#" class="main-btn">Прийти
+                    <h2 itemprop="name" class="home-cafe__title">Доставка еды</h2>
+                    <h3 itemprop="description" class="home-cafe__sub-title">Вкусно, как в АндерСон, <br> только дома</h3>
+                    <a href="#" class="main-btn">Заказать
                         <svg class="c-symbol symbol-arrow-3"><use xlink:href="sprite/main-index.svg#symbol-arrow-3" /></svg>
                     </a>
                 </div>
@@ -5539,26 +5539,27 @@
                     <path d="M60.76,20.27a2.19,2.19,0,1,1,0,4.37A2.19,2.19,0,1,1,60.76,20.27Z" transform="translate(-0.68 -1)"/>
                     <path d="M72.46,9.86C76,7.09,79.34,4.07,82.87,1.29c.87-.69,2.78-.13,2.26,1.23-1.81,4.8-3.67,9.61-6.73,13.78-.95,1.29-3.34.09-2.34-1.28A41.13,41.13,0,0,0,80.73,6.4c-2,1.67-4,3.34-6,4.94l-.06.09-.26.29a1.42,1.42,0,0,1-2.13-.26l0-.08A1.21,1.21,0,0,1,72.46,9.86Z"/>
                 </svg>
-                <img class="home-cafe__map" src="./img/scene/cafe/cafe-map.png" alt="Ближайшие кафе АндерСон" itemprop="./img/scene/cafe/cafe-map.png">
+                <img class="home-cafe__map" src="./img/scene/cafe/cafe-map-new.png" alt="Ближайшие кафе АндерСон" itemprop="./img/scene/cafe/cafe-map-new.png">
+                <img class="home-cafe__tag" src="./img/scene/cafe/cafe-tag.png" alt="Новый">
             </section>
         </div>
 
         <div class="mobile-item">
             <div class="mobile-celebration__text">
-                <h2 class="mobile-celebration__title">Праздничать</h2>
-                <h3 class="mobile-celebration__sub-title">Торжество, <br> зубилей и многое другое</h3>
+                <h2 class="mobile-celebration__title">Праздники домой</h2>
+                <h3 class="mobile-celebration__sub-title">Закажи анимацию на выезд</h3>
                 <!--<div class="mobile-text__arrow"><img src="./img/icons/icon-mobile-arrow.png" alt=""></div>-->
                 <a href="#" class="main-btn">
                     <svg class="c-symbol symbol-arrow-3"><use xlink:href="sprite/main-index.svg#symbol-arrow-3" /></svg>
-                    посмотреть
+                    Посмотреть
 
                 </a>
             </div>
             <section class="home-celebration" itemscope itemtype="http://schema.org/ImageObject">
                 <div class="home-celebration__text">
-                    <h2 itemprop="name" class="home-celebration__title">праздничать</h2>
-                    <h3 itemprop="description" class="home-celebration__sub-title">тортжество, зубилей и многое другое</h3>
-                    <a href="#" class="main-btn">посмотреть
+                    <h2 itemprop="name" class="home-celebration__title">Праздники домой</h2>
+                    <h3 itemprop="description" class="home-celebration__sub-title">Закажи анимацию на выезд</h3>
+                    <a href="#" class="main-btn">Посмотреть
                         <svg class="c-symbol symbol-arrow-3"><use xlink:href="sprite/main-index.svg#symbol-arrow-3" /></svg>
                     </a>
                 </div>
@@ -5617,7 +5618,7 @@
                     <path d="M52.2,15.53c1.46-.88,2.9-2.08,2.3-3.77a.64.64,0,0,0-.56-.45c-2.07-.09-3.76,2.34-4.33,4.1-1.55.08-3.34.63-4.87.26a14,14,0,0,0,.58-5.85,6.79,6.79,0,0,0-6.91-6.05,13.29,13.29,0,0,0-9.74,4.92A15.11,15.11,0,0,0,25.2,3.2c-2.27-2.06-5.93-3.47-9-2.45-2.7.9-4.1,3.54-4.53,6.21A30.86,30.86,0,0,0,12,16.84c-2.07.16-4.14.28-6.21.42a7.66,7.66,0,0,0-2.64-2c-.79-.43-2.41-1.17-3,0-.71,1.31,2,2.55,3.87,3.21a5,5,0,0,0-2.58,3.47.6.6,0,0,0,.57.6c2.35-.06,3.2-2.33,4.27-4.05a.58.58,0,0,0,.06-.15c2-.13,3.92-.24,5.87-.4.14.74.29,1.47.45,2.18A85.35,85.35,0,0,0,17.71,35a.63.63,0,0,0,.92.19c3.8-2.68,8.21-4.14,12.41-6a27.75,27.75,0,0,0,10.78-7.95,17.74,17.74,0,0,0,2.56-4.52c1.7.45,3.58-.14,5.29-.2.92,1,4.16,3.3,4.81,1.06C54.85,16.33,53.53,15.76,52.2,15.53Zm-50.72.41a1,1,0,0,1-.26-.22.66.66,0,0,1,.19,0,8.15,8.15,0,0,1,1.1.44,16.7,16.7,0,0,1,1.86,1.17C3.39,16.93,2.46,16.4,1.48,15.94ZM2.84,21.2a4.57,4.57,0,0,1,1.38-1.48A3.9,3.9,0,0,1,2.84,21.2Zm39.44-2.78c-5.13,9.07-15.79,10.18-23.79,15.48a82.56,82.56,0,0,1-4.64-13.73,45.08,45.08,0,0,1-1.11-7.7,18.75,18.75,0,0,1,.55-7c1.48-4.3,5.79-4.75,9.42-2.73s4.73,6.41,6.5,10c.32.64,1.38.21,1-.48s-.73-1.6-1.07-2.42a.57.57,0,0,0,.11-.11c2.41-3.22,7.57-6.18,11.62-4.44C45.93,7.51,44.38,14.72,42.28,18.43Zm11.15-5.95c0,1-1.23,1.78-2.28,2.36A4.53,4.53,0,0,1,53.43,12.48Zm-1.86,4.08c.85.09,1.82.28,1.8.63S52.37,17.12,51.56,16.56Z"
                           transform="translate(0 -0.41)" style="fill:#201600"/>
                 </svg>
-                <img class="home-celebration__packege" src="./img/scene/celebration/celebration-package.png" alt="Праздничать. Тортжество, зубелей и многое другое" itemprop="./img/scene/celebration/celebration-package.png">
+                <img class="home-celebration__packege" src="./img/scene/celebration/celebration-package.png" alt="Праздники домой. Тортжество, зубелей и многое другое" itemprop="./img/scene/celebration/celebration-package.png">
                 <!--<a href="#"><img class="home-celebration__arrow" src="./img/scene/celebration/celebration-arrow.png" alt=""></a>-->
             </section>
         </div>
