--- a/ordering-2020.html
+++ b/ordering-2020.html
@@ -39,9 +39,7 @@
     <link type="text/css" href="./bower_components/sumoselect/sumoselect.css" rel="stylesheet" media="all"/>
     <link rel="stylesheet" href="./css/main_global.css">
     <link rel="stylesheet" href="./css/media.css">
-
-
-
+    <link rel="stylesheet" href="./css/checkout-oneclick.css">
 
 </head>
 <body>
